# guinea_pig_life

./: .gitignore  Cargo.toml  LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/org/bevyengine/guinea_pig_life/: MainActivity.java
app/src/main/res/values/: ic_launcher_background.xml
design/: bowl.ase  player.ase
src/: lib.rs  main.rs
src/player/: mod.rs  player_plugin.rs  player_systems.rs  player_types.rs
