[package]
name = "guinea_pig_life"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"

[lib]
name = "guinea_pig_life"
path = "src/lib.rs"
crate-type = [
    "staticlib",
    "cdylib",    # needed for Android
    "rlib",      # rlib needed for running locally
]

[[bin]]
name = "guinea_pig_life"
path = "src/main.rs"

[patch.crates-io]
android-activity = { git = "https://github.com/damus-io/android-activity", rev = "a8948332c7c551303d32eb26a59d0abd676e47a5" }